[package]
name = "photoframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
openssl = { version = "0.10.0", features = ["vendored"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
simple_logger = "4.2"
tokio = { version = "1.32", features = ["full"] }
zip = "0.6"